--- a/.devcontainer/Dockerfile.deploy
+++ b/.devcontainer/Dockerfile.deploy
@@ -2,6 +2,14 @@
 ARG VARIANT="14"
 FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-${VARIANT}
 
+RUN cd / \
+    && git clone --branch audstanley https://github.com/audstanley/algorithms \
+    && cd algorithms \
+    && npm i \
+    && cd .. \
+    && mv algorithms code \
+    && cd code \
+    && chmod -x entrypoint.sh;
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
