--- a/.devcontainer/Dockerfile.deploy
+++ b/.devcontainer/Dockerfile.deploy
@@ -9,7 +9,7 @@ RUN cd / \
     && cd .. \
     && mv algorithms code \
     && cd code \
-    && chmod -x entrypoint.sh;
+    && chmod +x entrypoint.sh;
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
