--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "clean": "rm -rf ./build",
     "build": "npm run clean && NODE_ENV=production webpack",
-    "start": "nodemon --watch webpack.*.js --exec \"NODE_ENV=development webpack-dev-server\""
+    "start": "nodemon --watch webpack.*.js --exec \"NODE_ENV=development webpack-dev-server\"",
+    "production": "nodemon --watch webpack.*.js --exec \"NODE_ENV=production webpack-dev-server\""
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.6",
