--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clean": "rm -rf ./build",
     "build": "npm run clean && NODE_ENV=production webpack",
     "start": "nodemon --watch webpack.*.js --exec \"NODE_ENV=development webpack-dev-server\"",
-    "production": "nodemon --watch webpack.*.js --exec \"NODE_ENV=production webpack-dev-server\""
+    "production": "nodemon --watch webpack.*.js --exec \"NODE_ENV=production webpack-dev-server --host 0.0.0.0\""
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.6",
