--- a/.devcontainer/Dockerfile.deploy
+++ b/.devcontainer/Dockerfile.deploy
@@ -3,7 +3,7 @@ ARG VARIANT="14"
 FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-${VARIANT}
 
 RUN cd / \
-    && git clone --branch audstanley https://github.com/audstanley/algorithms \
+    && git clone --branch master https://github.com/audstanley/algorithms \
     && cd algorithms \
     && npm i \
     && cd .. \
