--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "2.2.0",
   "private": true,
   "description": "Using ",
+
+
+  "homepage": "https://audstanley.github.io/algorithms/",
+
+
   "keywords": [
     "react",
     "context",
     "hooks",
     "p5js"
   ],
+
+
+  "scripts": {
+    "deploy": "gh-pages -d build"
+  },
+
+
   "repository": {
     "type": "git",
     "url": "https://github.com/audstanley/algorithms.git"
