trying git subtree push

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "main": "src/index.jsx",
   "scripts": {
-    "clean": "rm -rf ./docs",
+    "clean": "rm -rf ./dist",
     "build": "npm run clean && NODE_ENV=production webpack",
     "start": "nodemon --watch webpack.*.js --exec \"NODE_ENV=development webpack-dev-server\"",
     "production": "nodemon --watch webpack.*.js --exec \"NODE_ENV=production webpack-dev-server --host 0.0.0.0 --disable-host-check\""
